--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Discover new websites.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/css/style.css?v=1.1">
-  <link rel="stylesheet" href="https://rsms.me/inter/inter.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./inter.css" media="print" onload="this.media='all'">
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Webpage List" />
